# AzulClaw

./: .gitignore  Analisis_NemoClaw.md  LICENSE  README.md  package.json  requirements.txt
AzulClaw/: README.md
azul_backend/: README.md  workspace_layout.py
azul_desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
azul_desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
azul_desktop/src-tauri/capabilities/: azure-login.json  default.json
azul_desktop/src-tauri/nsis/: desktop-shortcut.nsh
azul_desktop/src-tauri/src/: main.rs
azure/: README.md
docs/: 01_architecture.md  01_arquitectura.md  02_setup_and_development.md  02_setup_y_desarrollo.md  03_security_model.md  04_component_reference.md  05_product_roadmap.md  05_roadmap_desarrollo.md  06_cognitive_design.md  06_diseno_cognitivo.md  07_production_readiness.md  08_desktop_interface_design.md  08_diseno_interfaz_desktop.md  09_desktop_low_fidelity_wireframes.md  09_wireframes_baja_fidelidad_desktop.md  10_arquitectura_desktop_y_estructura_repo.md  10_desktop_architecture_and_repo_structure.md  11_heartbeats_system.md  12_azure_bot_architecture.md  13_azure_bot_deployment_guide.md  14_channels_and_transport.md  15_memory_system.md  16_marketplace_and_skills.md  README.md  arquitectura_azulclaw.drawio  arquitectura_azulclaw_v1.drawio  folder-organizer-agent-framework-refactor-plan.md  pr_memory_system.md
scripts/: migrate_env_to_keyvault.py  package_backend.ps1  package_desktop.ps1  package_skills.py  print_workspace.py  setup.sh  validate_skills.py
skills/: README.md
(+246 files in other folders)
