[package]
name = "azul_desktop"
version = "0.1.0"
description = "Desktop shell for AzulClaw"
authors = ["AzulClaw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
