[package]
name = "azul_desktop"
version = "1.0.0"
description = "Desktop shell for AzulClaw"
authors = ["AzulClaw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-dialog = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
